--- a/app/src/main/res/layout/bottom_sheet_layout_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout_list.xml
@@ -42,11 +42,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="casual"
+        android:fontFamily="@font/calibri"
         android:gravity="center"
-        android:text="List Name"
+        android:text="שם הרשימה"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <Space
@@ -56,11 +56,11 @@
     <EditText
         android:id="@+id/et_list_name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:ems="10"
-        android:fontFamily="casual"
+        android:fontFamily="@font/calibri"
         android:gravity="center"
-        android:hint="Type Text Here"
+        android:hint="הקלד טקסט כאן"
         android:inputType="textPersonName" />
 
     <Space
@@ -73,10 +73,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:backgroundTint="#FFFFFF"
-        android:fontFamily="casual"
+        android:fontFamily="@font/calibri"
         android:gravity="center"
         android:onClick="add_list"
-        android:text="Add List"
+        android:text="יצירת הרשימה"
         android:textColor="#000000" />
 
 </LinearLayout>
