--- a/app/src/main/res/layout/activity_tasks_day_lists.xml
+++ b/app/src/main/res/layout/activity_tasks_day_lists.xml
@@ -52,14 +52,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checkable="true"
+            android:checked="true"
             android:onClick="sort_items"
             android:text="מיון לפי שם"
             android:textAlignment="center"
+            android:textAppearance="@style/AppTheme.GenderChip"
             app:checkedIcon="@drawable/checked_icon"
             app:chipStrokeColor="@color/light_gray"
-            app:chipStrokeWidth="1dp"
-            android:textAppearance="@style/AppTheme.GenderChip"
-            android:checked="true"/>
+            app:chipStrokeWidth="1dp" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/sort_by_date"
